--- a/test/makefile
+++ b/test/makefile
@@ -1,11 +1,10 @@
 # Mark Wiemer mww 9074356420
 # Jenny Ye haengjung 9075878315
-
 all: main.o munch.o queue.o reader.o writer.o
 	gcc -o prodcomm main.o munch.o queue.o reader.o writer.o -lpthread
 
 main.o: main.c main.h munch.h queue.h writer.h
-	gcc -Wall -Wextra main.c
+	gcc -Wall -Wextra -c main.c
 
 munch.o: munch.c main.h munch.h queue.h
 	gcc -Wall -Wextra -c munch.c
@@ -20,7 +19,7 @@ writer.o: writer.c main.h queue.h
 	gcc -Wall -Wextra -c writer.c
 
 clean:
-	rm -f procdomm out.txt *.o
+	rm -f prodcomm out.txt *.o
 	rm -rf ./scan-build
 
 scan-build: clean
